[tool.poetry]
name = "road-damage-tracking"
version = "0.0.1"
description = "Detect and track some road damage."
authors = ["beethogedeon <beethogedeon@gmail.com>"]
homepage = "https://github.com/beethogedeon/road-damage-tracking"
repository = "https://github.com/beethogedeon/road-damage-tracking"
documentation = "https://github.com/beethogedeon/road-damage-tracking"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.14"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
